--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
+
 
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
@@ -19,10 +23,10 @@
         android:theme="@style/Theme.MyLauncher"
         tools:targetApi="31">
         <activity
-            android:name=".activity.specialApps.SpecialAppsActivity"
+            android:name=".specialApps.SpecialAppsActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.mainHome.MainActivity"
+            android:name=".mainActivity.MainActivity"
             android:clearTaskOnLaunch="true"
             android:exported="true"
             android:launchMode="singleTask"
